# secret-santa

./: LICENSE.md  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: .gitignore  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/atoms/Heading/: component.css  index.tsx
frontend/src/atoms/Input/: component.css  index.tsx
frontend/src/components/App/: component.css  global.css  index.tsx
frontend/src/components/Healthz/: index.tsx
frontend/src/components/Login/: component.css  index.tsx
frontend/src/network/: Healthz.ts
